Fix for #1943 Infuse Dialog Errors
-Added margin-top on button
-Changed scss .gearContainer width from 100% to auto, getting rid of
horizontal scroll bar.

--- a/src/scripts/infuse/infuse.scss
+++ b/src/scripts/infuse/infuse.scss
@@ -83,7 +83,7 @@
   }
 
   .gearsContainer {
-    width: 100%;
+    width: auto;
     padding: 10px 25px;
     overflow: hidden;
 
